# standard-app-api

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  openapi.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
marketplace_standard_app_api/: __init__.py  __main__.py  database.py  main.py  models.py  security.py
marketplace_standard_app_api/models/: data_sink.py  data_source.py  message_broker.py  object_storage.py  system.py  transformation.py
marketplace_standard_app_api/reference/: object_storage.py
marketplace_standard_app_api/reference/simulation_controller/: __init__.py  simulation.py  simulation_manager.py  utils.py
marketplace_standard_app_api/reference/simulation_controller/templates/: inputFile.template
marketplace_standard_app_api/routers/: frontend.py  object_storage.py  optimade.py  system.py  transformation.py
tests/: conftest.py  test_api.py  test_frontend_routes.py  test_object_storage_routes.py  test_schema.py  test_transformations_routes.py
