[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "marketplace_standard_app_api"
authors = [{name = "Carl Simon Adorf et al", email = "simon.adorf@epfl.ch"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10,<4"
dependencies = [
  "fastapi==0.75.2",
  "pydantic==1.9.0",
  "requests==2.26.0",
]

[project.urls]
Home = "https://github.com/materials-marketplace/standard-app-api"


[tool.mypy]
plugins = ["pydantic.mypy"]
