[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "marketplace-standard-app-api"
authors = [{name = "Carl Simon Adorf et al", email = "simon.adorf@epfl.ch"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8,<4"
dependencies = [
  "email-validator<=2.0, >=1.2.1",
  "fastapi<=0.95.1, >0.75",
  "python-multipart<=0.1, >0.0.5",
  "requests<3.0, >2.26.0",
]

[project.urls]
Home = "https://github.com/materials-marketplace/standard-app-api"

[project.optional-dependencies]
cli = [
  "click==8.1.3"
]
dev = [
  "bumpver==2021.1114",
]
tests = [
  "pytest==7.1.2",
]

[project.scripts]
marketplace-standard-app-api = "marketplace_standard_app_api.__main__:cli"

[tool.flit.module]
name = "marketplace_standard_app_api"


[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.bumpver]
current_version = "v0.5.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"marketplace_standard_app_api/version.py" = [
    '__version__ = "{pep440_version}"'
]
"README.md" = [
    "This repository contains the API version: {pep440_version}",
]
"openapi.json" = [
    '"version": "{pep440_version}"'
]
